# android-rag

./: README.md  build.gradle  gradle.properties
app/: .gitignore  build.gradle
app/src/androidTest/java/io/datamachines/faiss/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/source/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/source/llama.cpp/common/: common.h
app/src/main/java/io/datamachines/faiss/: ChunkMetadata.java  LlamaCppWrapper.java  MainActivity.java  SentenceEmbeddingActivity.java
app/src/main/kotlin/: SentenceEmbeddingWrapper.kt
app/src/main/res/layout/: activity_main.xml  activity_sentence_embedding.xml
gradle/wrapper/: gradle-wrapper.properties
